js/src/tests/test262/built-ins/NativeErrors/TypeError/prototype/proto.js
assert
.
sameValue
(
Object
.
getPrototypeOf
(
TypeError
.
prototype
)
Error
.
prototype
)
;
reportCompare
(
0
0
)
;
